src/pages/quick-start/styles.module.css
.container {
  width: 100%;
  height: 100%;
}

.optionsPane {
  display: flex;
  flex-direction: row;
  padding: 20px var(--ifm-navbar-padding-horizontal);
  flex-wrap: wrap;
  grid-gap: 8px 0;
}

.optionContainer {
  display: flex;
  flex-direction: row;
  margin-right: 1.5rem;
}

.optionContainer:last-child {
  margin-right: 0;
}

.optionContainer > span {
  color: rgb(72, 77, 91);
  font-weight: 500;
  margin-right: 0.5rem;
}

.optionContainer :global .navbar__link {
  padding: 0;
}

.copyContainer {
  margin-left: auto;
}

.copyContainer .copyButton {
  margin-left: 8px;
  border: none;
  background: none;
  cursor: pointer;
  color: rgb(77, 77, 77);
  padding: 4px;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.copyContainer .copyButton:hover {
  background-color: var(--ifm-menu-color-background-active);
}

.copyContainer .copyButton.copied {
  color: rgb(131, 131, 131);
}

.copyContainer .copyButton.copied:hover {
  cursor: default;
  background: none;
}

.cols {
  width: 100%;
  display: block;
  flex-direction: row;
}

.leftCol {
  overflow-x: hidden;
  overflow-y: scroll;
  margin-left: 0;
  margin-right: 0;
}

.leftCol h1 {
  font-family: Poppins;
  font-weight: 600;
  margin: 0;
}

.stepContainer {
  padding: 1.25rem var(--ifm-navbar-padding-horizontal);
  box-shadow: inset 0 1px #e3e8ee;
  border-left: 6px solid transparent;
  cursor: pointer;
}

.stepContainer:hover {
  border-color: #dadfe4;
}

.stepContainer.stepSelected {
  background-color: #f7fafc;
  border-color: var(--ifm-color-primary);
}

/* .stepContainer p {
  margin-bottom: 0;
} */

.stepContainer .stepHeader {
  font-family: Poppins;
  font-weight: 600;
  margin-bottom: 12px;
  font-size: 20px;
}

.rightCol {
  width: 100%;
}

/* Switch */
.switch {
  position: relative;
  display: inline-block;
  width: 40px;
  height: 24px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 16px;
  width: 16px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
}

.switch input:checked + .slider {
  background-color: var(--ifm-color-primary-light);
}

.switch input:focus + .slider {
  box-shadow: 0 0 1px var(--ifm-color-primary-light);
}

input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

/* Drowpdown */
.w3DropdownLink {
  cursor: pointer;
}

.w3DropdownMenu {
  padding: 4px 0;
}

.w3DropdownMenu li {
  padding: 4px 12px;
  cursor: pointer;
}

.w3DropdownMenu li:hover {
  background-color: #ebedf0;
}

@media (min-width: 960px) {
  .cols {
    display: flex;
    height: calc(100vh - 86px);
  }
  .leftCol {
    width: 40%;
    overflow-x: hidden;
    overflow-y: scroll;
    margin-left: 0;
    margin-right: 0;
  }
  .rightCol {
    width: 60%;
  }
}

